@@ -56,7 +56,7 @@ copy = LICENSE
 
 [Test::Kwalitee / @Author::KENTNL/Test::Kwalitee]
 
-[EOLTests / @Author::KENTNL/EOLTests]
+[Test::EOL / @Author::KENTNL/Test::EOL]
 trailing_whitespace = 1
 
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
@@ -80,7 +80,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.021000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.022000
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -165,7 +165,6 @@ Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
-Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
@@ -197,6 +196,7 @@ Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
 Dist::Zilla::Plugin::Test::Perl::Critic = 0
