@@ -5,8 +5,12 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Test::More 1.001008
 
  [Added / develop requires]
+ - Dist::Zilla::Plugin::Test::EOL 0.14
  - Test::EOL 1.5
  - Test::More
+
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::Test::EOL 0.14
 
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 6.98 → 7.00
@@ -17,7 +21,6 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::Plugin::AutoPrereqs 5.020 → 5.021
  - Dist::Zilla::Plugin::BumpVersionAfterRelease 0.003 → 0.004
  - Dist::Zilla::Plugin::ConfirmRelease 5.020 → 5.021
- - Dist::Zilla::Plugin::EOLTests 0.02 → 0.14
  - Dist::Zilla::Plugin::Git::Check 2.024 → 2.025
  - Dist::Zilla::Plugin::Git::Commit 2.024 → 2.025
  - Dist::Zilla::Plugin::Git::CommitBuild 2.024 → 2.025
@@ -49,7 +52,6 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::Plugin::AutoPrereqs 5.020 → 5.021
  - Dist::Zilla::Plugin::BumpVersionAfterRelease 0.003 → 0.004
  - Dist::Zilla::Plugin::ConfirmRelease 5.020 → 5.021
- - Dist::Zilla::Plugin::EOLTests 0.02 → 0.14
  - Dist::Zilla::Plugin::Git::Check 2.024 → 2.025
  - Dist::Zilla::Plugin::Git::Commit 2.024 → 2.025
  - Dist::Zilla::Plugin::Git::CommitBuild 2.024 → 2.025
@@ -82,6 +84,12 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Changed / test requires]
  - Path::Tiny 0.058 → 0.059
  - Test::DZil 5.020 → 5.021
+
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::EOLTests 0.02
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Plugin::EOLTests 0.02
 
 2.021000 2014-10-05T11:28:53Z
  [Added / runtime requires]
